--- a/thm/thm.html
+++ b/thm/thm.html
@@ -1,1 +1,1 @@
-<a href="/sweettooth.html"><p style="text-align:center">Sweettooth</p></a>
+<a href="/thm/sweettooth.html"><p style="text-align:center">Sweettooth</p></a>
