--- a/thm/thm.html
+++ b/thm/thm.html
@@ -1,2 +1,2 @@
 <a href="/thm/sweettooth.html"><p style="text-align:center">Sweettooth</p></a>
-<a href="/thm/sweettooth.html"><p style="text-align:center">CMSpit</p></a>
+<a href="/thm/cmspit.html"><p style="text-align:center">CMSpit</p></a>
